kubernetes/explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
  labels:
    app: explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer
  template:
    metadata:
      labels:
        app: explorer
    spec:
      containers:
        - name: explorer
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: explorer
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
