kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boshi-backend
  labels:
    app: boshi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boshi-backend
  template:
    metadata:
      labels:
        app: boshi-backend
    spec:
      containers:
        - name: boshi-backend
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: boshi-backend
  labels:
    app: boshi-backend
spec:
  selector:
    app: boshi-backend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: boshi-backend-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boshi-backend
                port:
                  number: 80
