kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boshi-frontend
  labels:
    app: boshi-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boshi-frontend
  template:
    metadata:
      labels:
        app: boshi-frontend
    spec:
      containers:
        - name: boshi-frontend
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: boshi-frontend
  labels:
    app: boshi-frontend
spec:
  selector:
    app: boshi-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location / {
        if ($request_method = OPTIONS) {
          rewrite ^/$ / redirect;
          proxy_pass http://boshi-backend.${NAMESPACE}.svc.cluster.local;
          break;
        }
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: boshi-frontend-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boshi-frontend
                port:
                  number: 80
